# yambuck

./: .gitignore  AGENTS.md  BRAND_COLORS.md  README.md  TODO.md
apps/yambuck-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/yambuck-gui/src-tauri/capabilities/: default.json
apps/yambuck-gui/src-tauri/icons/: icon.icns
apps/yambuck-gui/src-tauri/src/: lib.rs  main.rs
apps/yambuck-gui/src-tauri/src/commands/: installer.rs  logs.rs  mod.rs  system.rs  update.rs
apps/yambuck-gui/src-tauri/src/support/: desktop_integration.rs  elevation.rs  launch_args.rs  logging.rs  mod.rs  system_info.rs  update_apply.rs
crates/yambuck-core/: Cargo.toml
crates/yambuck-core/src/: install_flow.rs  install_options.rs  installed_apps.rs  lib.rs  package_inspection.rs  storage.rs  types.rs  update_feed.rs
crates/yambuck-core/src/manifest/: mod.rs  v1.rs  v2.rs
crates/yambuck-core/tests/: manifest_compatibility_fixtures.rs  media_validation_fixtures.rs  runtime_dependency_fixtures.rs
crates/yambuck-core/tests/fixtures/manifests/: v1-valid.json  v2-minimal.json  v99-unsupported.json
docs/: BOOTSTRAP_SPEC.md  CNAME  DECISIONS.md  INSTALL_UNINSTALL_PATHS.md  MANIFEST_SCHEMA_STRATEGY.md  PACKAGE_BUILDER_GUI_DRAFT.md  PACKAGE_SPEC.md  PRIVILEGE_AUTH.md  PRODUCT_CONTEXT.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RUNTIME_DEPENDENCIES_DRAFT.md  SCOPE_INSTALL_POLICY.md  SPEC.md  UI_SHELL_STANDARD.md  UI_STYLE_ARCHITECTURE.md  UI_STYLE_REFACTOR_PLAN.md  UNINSTALL.md  UPDATES_SPEC.md  _config.yml  donate.html  index.html  install.sh  styles.css  uninstall.html  uninstall.sh
(+149 files in other folders)
