[package]
name = "yambuck-core"
version = "0.1.0"
edition = "2021"
description = "Core install and package models for Yambuck"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
semver = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
chrono = "0.4"
